--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 body {
-    background-color: #5F4B8B;
+    background-color: #282828;
     margin: 0px;
 }
 
@@ -24,40 +24,42 @@ body {
 }
 
 #search {
-    width: 100%;
-    height: 100vh;
-    background-color: #272727;
-    display: none;
-    position: absolute;
-    box-sizing: border-box;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #32302f;
+  border: solid 1px #fbf1c7;
+  display: none;
+  position: absolute;
+  box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #search-field {
-    width: 90%;
-    padding: .75em 1em;
-    box-sizing: border-box;
-    background-color: #272727;
-    border: solid 0px #272727;
-    font-family: "Roboto Mono";
-    font-size: 4rem;
-    color: #f2f2f2;
-    outline: none;
-    border-radius: 3px;
-    margin-bottom: 1em;
-    text-align: center;
+  width: 90%;
+  padding: .75em 1em;
+  box-sizing: border-box;
+  background-color: #32302f;
+  border: solid 1px #fbf1c7;
+  font-family: "Roboto Mono";
+  font-size: 4rem;
+  color: #f2f2f2;
+  outline: none;
+  border-radius: 3px;
+  margin-bottom: 1em;
+  text-align: center;
 }
 
 .weather-container {
-    width: 30%;
-    background-color: #272727;
-    padding: 1em;
-    border-radius: 3px;
-    font-family: "Roboto Mono";
-    color: #fff;
-    text-align: center;
+  width: 30%;
+  background-color: #32302f;
+  border: solid 1px #fbf1c7;
+  padding: 1em;
+  border-radius: 3px;
+  font-family: "Roboto Mono";
+  color: #fff;
+  text-align: center;
 }
 .inline {
     display: inline-block;
@@ -65,7 +67,8 @@ body {
 
 .bookmark-container {
     display: flex;
-    flex-direction: row;
+  flex-direction: row;
+  
     justify-content: center;
     width: 50%;
     margin: 1em 0em;
@@ -89,14 +92,15 @@ body {
 }
 
 .bookmark-set{
-    padding: 1em;
-    background-color: #272727;
-    border-radius: 3px;
-    font-family: "Roboto Mono";
-    font-size: .85rem;
-    width: 25%;
-    height: 10em;
-    margin: 0em .5em;
+  padding: 1em;
+  background-color: #32302f;
+  border: solid 1px #fbf1c7;
+  border-radius: 3px;
+  font-family: "Roboto Mono";
+  font-size: .85rem;
+  width: 25%;
+  height: 10em;
+  margin: 0em .5em;
 }
 .bookmark-inner-container {
     overflow-y: scroll;
